--- a/.pylintrc
+++ b/.pylintrc
@@ -155,6 +155,7 @@ disable=print-statement,
         import-outside-toplevel,
         wrong-import-order,
         protected-access,
+        singleton-comparison,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
